# microbiome

./: .env  .gitignore  README.md
microbiome/: Cargo.toml
microbiome/src/: constants.rs  invariants.rs  lib.rs  main.rs  util.rs
microbiome/src/entities/: food.rs  mod.rs  npc.rs
server/: Cargo.toml
server/src/: app.rs  bind.rs  config.rs  main.rs  state.rs  ws.rs
ui/: .eslintrc.json  index.html  nodemon.json  package.json  tailwind.config.cjs  tsconfig.json  webpack.config.cjs
ui/src/: App.tsx  Main.tsx  Socket.tsx  style.css  types.d.ts
ui/src/api/: api.ts
ui/src/canvas/: display.ts
ui/static/fonts/: fonts.css
