[package]
name = "microbiome"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
quadtree = { version = "0.3.3", features = ["serde"] }
rand = "0.8.5"
random_color = "0.8.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
zmq = "0.10.0"
